--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "postcss": "^8.4.31"
   },
   "scripts": {
-    "start": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
+    "start": "vite --port 3000",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest"
@@ -41,7 +41,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.21",
     "jsdom": "^22.1.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^4.5.9",
     "vitest": "^0.34.6"
   }
